# Miscellaneous

./: README-pt-BR.md  README.md  directory_contents.txt
Algorithms/: ler_conteudo.py  ler_conteudo_python3.py  ler_conteudo_workspace.py
Algorithms/algorithms_1/: p01_equacao_segundo_grau_bhaskara.por  p01_helloworld.cpp  p01_numero_divisivel.por  p01_operadores_aritmeticos.por  p01_operadores_aritmeticos.py  p01_operadores_logicos_bitwise.py  p01_operadores_prioridade.por  p01_operadores_relacionais.por  p01_par_impar.por  p01_tipagem_dinamica.py  p01_tipos_bytes.cpp  p01_tipos_limites.cpp  p01_variaveis_constantes.por
Algorithms/algorithms_2/: p02_caso-se.por  p02_caso-se_mes.por  p02_numero-perfeito.cpp  p02_numeros-primos.por  p02_palindromos.por  p02_spoj_cpttrn3_quadrados.por  p02_spoj_spttrn1_espiral.cpp  p02_tabela_ascii.cpp  p02_tabela_ascii_extendida.cpp  p02_tabuada.por  p02_triangulo-pascal.por  po2_enquanto-faca_faca-ate.por
Algorithms/algorithms_3/: p03_for_limites.cpp  p03_vetor_detalhes.por  p03_vetor_jogo-da-velha.por  p03_vetor_maior-menor.por  p03_vetor_maior-menor_.por  p03_vetor_mes.por  p03_vetor_par-impar_.por
Algorithms/algorithms_4/: p04_converter_binario-inteiro.por  p04_converter_inteiro-binario.por  p04_fibonacci.por  p04_labirinto.por  p04_torre_hanoi.alg  p04_variavel_global_local.por
Algorithms/algorithms_5/: p05_passagem_referencia.cpp  p05_passagem_valor.cpp  p05_ponteiros_passagem_valor-e-referencia.cpp
Algorithms/algorithms_6/: p06_pesquisa_binaria.por  p06_pesquisa_binaria.py  p06_pesquisa_sequencial_ordenada.por  p06_pesquisa_sequencial_ordenada.py  p06_pesquisa_sequencial_simples.alg  p06_pesquisa_sequencial_simples.py
Algorithms/algorithms_7/: p07_ordena_bolha.por  p07_ordena_bolha.py  p07_ordena_insercao_direta.por  p07_ordena_insercao_direta.py  p07_ordena_selecao_direta.py
Algorithms/algorithms_8/: p08_array_01_vetor.por  p08_array_02_matriz.por  p08_escolha-caso_sorveteria.por  p08_estruturas-condicionais_operadores-logicos_intervalos.por  p08_estruturas-condicionais_operadores-relacionais.por  p08_estruturas-repeticao_calculadora.por  p08_estruturas-repeticao_enquanto_faca-enquanto_01.por  p08_estruturas-repeticao_enquanto_faca-enquanto_02.por  p08_extra_arvore-de-natal.por  p08_extra_bingo.por  p08_extra_grafico.por  p08_funcao_numeros-primos.por  p08_loop.por
Code_Editors/Qt-Creator/templates/wizards/projects/fortran_cmake_project/: CMakeLists.txt  main.f90  wizard.json
Code_Editors/Qt-Creator/templates/wizards/projects/plaincpp26_modern_cmake/: CMakeLists.txt  main.cpp  main_example.cpp  wizard.json
Code_Editors/Sublime_Text/: README.md
Cpp/: clean_dir.cpp  count_frequency_elements.cpp  counter_using_vector.cpp  multiply_matrix.cpp  remove_excess_characters.cpp
Cpp/Cpp_Project_Model/Project/: .gitignore  CMakeLists.txt  LICENSE  install.sh
Cpp/Cpp_Project_Model/Project/app/cli/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/app/gui/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/app/gui/gtkmm4/: CMakeLists.txt  gtk_mainwindow.ui  mainwindow.hpp
Cpp/Cpp_Project_Model/Project/app/gui/qt6/: CMakeLists.txt  mainwindow.h
Cpp/Cpp_Project_Model/Project/bindings/: PythonEnvSetup.cmake
Cpp/Cpp_Project_Model/Project/bindings/cli/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/bindings/cli/python/: CMakeLists.txt  cli_ctypes.py  example_ctypes.py
Cpp/Cpp_Project_Model/Project/bindings/gui/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/bindings/gui/pyside6/: CMakeLists.txt  gui_pyside6.py
Cpp/Cpp_Project_Model/Project/bindings/python/: CMakeLists.txt  PythonEnvSetup.cmake
Cpp/Cpp_Project_Model/Project/bindings/python/gui/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/cli/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/cli/cpp/: cli.cpp
Cpp/Cpp_Project_Model/Project/gui/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/gui/gtkmm4/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/gui/qt6/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/lib/include/: lib.hpp
Cpp/Cpp_Project_Model/Project/src/: CMakeLists.txt
Cpp/Cpp_Project_Model/Project/test/: test.cpp
Cpp/Cpp_Project_Model/Project/tests/: CMakeLists.txt
Cpp/Geometry/: test_all.sh  test_basic.cpp  test_circle.cpp  test_rectangle.cpp  test_triangle.cpp
Cpp/Simple_Header-Cpp_Generator/: game_project.sh  hcpp_generator3.sh  model.cpp  model.h  model1.cpp  model1.h  modelMain.cpp
Cpp/Support_Scripts/: hcpp_generator.sh  hcpp_generator2.sh  model.cpp
Cpp/Tools/: test_tools_basic.cpp  tools_basic.hpp
Debian_Xfce_Openbox/: README.md
Kate/Kate_Snippets/: README.md
OpenBox/: feh_wallpaper.sh  list_packages.pl  list_packages.sh
OpenBox/Deb_Bkp_Package/: copy_package-list.sh  package_list_bkp  package_list_reinstall  prepare_package-list.py  reinstall_package-list.sh
Programming_Logic_Algorithms/: README.md  ler_conteudo_workspace.py
Programming_Logic_Algorithms/algorithms_1/: p01_helloworld.cpp  p01_numero_divisivel.por  p01_operadores_logicos.por  p01_par_impar.por  p01_tipagem_dinamica.py  p01_tipos_limites.cc  p01_variaveis_constantes.por
Programming_Logic_Algorithms/algorithms_2/: p02_fatorial.por  p02_fibonacci.por  p02_inverte_numero.por  p02_minimo-multiplo-comum,.por  p02_numeros-primos.por  p02_spoj_cpttrn8_losangos.cpp  p02_spoj_cpttrn8_losangos.por
Python/: undoRedo.py
Qt-Creator/: KeyMap.kms  README.md
Qt-Creator/templates/wizards/projects/plainc23_modern_cmake_simple/: CMakeLists.txt  main.c
Qt-Creator/templates/wizards/projects/plaincpp23_modern/: CMakeLists.txt  main.cpp  wizard.json
Qt-Creator/templates/wizards/projects/py_ctypes_project/: CMakeLists.txt  library.cpp  test.py  wizard.json
Scripts/Cpp/Cpp_Project_Model/Project/bindings/python/cli/: CMakeLists.txt  cli_ctypes.py
Scripts/Cpp/Cpp_Project_Model/Project/src/: CMakeLists.txt
Scripts/Cpp/Cpp_Project_Model/Project/src/include/: lib.hpp
Scripts/Cpp/Cpp_Project_Model/Project/src/src/: lib.cpp
Scripts/Cpp/Simple_Header-Cpp_Generator/models/: CMakeLists.txt  model_1.cpp  model_1.h
Sublime_Text/: README-pt-BR.md  README.md
(+365 files in other folders)
