cmake_minimum_required(VERSION 3.21 FATAL_ERROR)

project(
  %{ProjectName}
  VERSION 1.0.0
  LANGUAGES C)

set(PROGRAM_NAME %{ProjectName})

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SOURCES src/main.c)

add_executable(\${PROGRAM_NAME} \${SOURCES})

install(
  TARGETS \${PROGRAM_NAME}
  LIBRARY DESTINATION \${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION \${CMAKE_INSTALL_BINDIR})
