cmake_minimum_required(VERSION 3.28)

project(%{ProjectName} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCES
    %{CppFileName}
)

# set(RESOURCE_FILES
#   image.png
# )

add_executable(\${PROJECT_NAME} \${SOURCES})

install(TARGETS \${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# file(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_BINARY_DIR}/Resources)